<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pictoslide.www.activities.MainActivity">
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback_menu_item_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report_issue"
        android:orderInCategory="100"
        android:title="@string/report_an_issue_menu_item_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="100"
        android:title="@string/share_app_menu_item_text"
        app:showAsAction="never" />
</menu>